Modified map filter drop downs

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -38,33 +38,27 @@ Control Room Log Map
                                 <li class="list-group-item"><span class="label severity5">Very Low</span></li>
                             </ul>
                         </div>
-                        <div class="col-md-2">
-                            <fieldset>
-                                <strong>Filter by Status</strong>
-                                <p>
-                                    <label>Fitler</label>
-                                    <select id = "filter">
-                                        <option value = "All">All</option>
-                                        <option value = "Open">Open</option>
-                                        <option value = "Closed">Closed</option>
-                                    </select>
-                                </p>
-                            </fieldset>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label>Filter by Status</label>
+                                <select id = "filter" class = "form-control">
+                                    <option value = "All">All</option>
+                                    <option value = "Open">Open</option>
+                                    <option value = "Closed">Closed</option>
+                                </select>
+                            </div>
                         </div>
-                        <div class="col-md-2">
-                            <fieldset>
-                                <strong>Filter by Type</strong>
-                                <p>
-                                    <label>Type Fitler</label>
-                                    <select id = "typeFilter">
-                                        <option value = "All">All</option>
-                                        <option value = "Medical">Medical</option>
-                                        <option value = "Security">Security</option>
-                                        <option value = "General">General</option>
-                                        <option value = "Lost">Lost Property</option>
-                                    </select>
-                                </p>
-                            </fieldset>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label>Filter by Type</label>
+                                <select id = "typeFilter" class = "form-control">
+                                    <option value = "All">All</option>
+                                    <option value = "Medical">Medical</option>
+                                    <option value = "Security">Security</option>
+                                    <option value = "General">General</option>
+                                    <option value = "Lost">Lost Property</option>
+                                </select>>
+                            </div>
                         </div>                        
                     </div>
                 </div>
