debugging filter selection

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -41,7 +41,7 @@ Control Room Log Map
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label>Filter by Status</label>
-                                <select id = "filter" class = "form-control" onchange="setFitler(this)">
+                                <select id = "filter" class = "form-control" onchange="setFilter(this)">
                                     <option value = "All" class = "form-control">All</option>
                                     <option value = "Open" class = "form-control">Open</option>
                                     <option value = "Closed" class = "form-control">Closed</option>
@@ -51,7 +51,7 @@ Control Room Log Map
                         <div class="col-md-2">
                             <div class="form-group">
                                 <label>Filter by Type</label>
-                                <select id = "typeFilter" class = "form-control" onchange="setTypeFitler(this)">
+                                <select id = "typeFilter" class = "form-control" onchange="setTypeFilter(this)">
                                     <option value = "All" class = "form-control">All</option>
                                     <option value = "Medical" class = "form-control">Medical</option>
                                     <option value = "Security" class = "form-control">Security</option>
