Modified map filter selection values

--- a/app/Resources/views/map.html.twig
+++ b/app/Resources/views/map.html.twig
@@ -42,9 +42,9 @@ Control Room Log Map
                             <div class="form-group">
                                 <label>Filter by Status</label>
                                 <select id = "filter" class = "form-control" onchange="setFilter(this)">
-                                    <option value = "All" class = "form-control">All</option>
-                                    <option value = "Open" class = "form-control">Open</option>
-                                    <option value = "Closed" class = "form-control">Closed</option>
+                                    <option value = "all" class = "form-control">All</option>
+                                    <option value = "open" class = "form-control">Open</option>
+                                    <option value = "closed" class = "form-control">Closed</option>
                                 </select>
                             </div>
                         </div>
@@ -52,11 +52,11 @@ Control Room Log Map
                             <div class="form-group">
                                 <label>Filter by Type</label>
                                 <select id = "typeFilter" class = "form-control" onchange="setTypeFilter(this)">
-                                    <option value = "All" class = "form-control">All</option>
-                                    <option value = "Medical" class = "form-control">Medical</option>
-                                    <option value = "Security" class = "form-control">Security</option>
-                                    <option value = "General" class = "form-control">General</option>
-                                    <option value = "Lost" class = "form-control">Lost Property</option>
+                                    <option value = "all" class = "form-control">All</option>
+                                    <option value = "medical" class = "form-control">Medical</option>
+                                    <option value = "security" class = "form-control">Security</option>
+                                    <option value = "general" class = "form-control">General</option>
+                                    <option value = "lost" class = "form-control">Lost Property</option>
                                 </select>
                             </div>
                         </div>                        
