Modified Toggle field user button

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -15,11 +15,11 @@
                     <div id="Location"><strong>Location:</strong><br>Updating... </div>
                 </a>
                 <a href="{{ path('field_user_toggle') }}">
-                    Field User Off
+                    <strong>Toggle field user off</strong>
                 </a>
             {% else %}
                 <a href="{{ path('field_user_toggle') }}">
-                    Field User On
+                    <strong>Toggle field user on</strong>
                 </a>
             {% endif %}
     </div>
