--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -10,21 +10,25 @@
             <a href="{{ path('event_weather_radar') }}">
                 <div id="SidebarWeather"><strong>Weather:</strong> {{ activeEventWeather(app.user.id) }}</div>
             </a>
-            {% if is_granted('ROLE_USER') %}
-                {% if is_granted('ROLE_FIELD') %}
-                    <a class="locationURL" href="#" target="_blank">
-                        <div id="Location"><strong>Location:</strong><br>Updating... </div>
-                    </a>
-                    <a href="{{ path('field_user_toggle') }}">
-                        <strong>Toggle field user off</strong>
-                    </a>
-                {% else %}
-                    <a href="{{ path('field_user_toggle') }}">
-                        <strong>Toggle field user on</strong>
-                    </a>
-                {% endif %}
+            {% if is_granted('ROLE_FIELD') %}
+                <a class="locationURL" href="#" target="_blank">
+                    <div id="Location"><strong>Location:</strong><br>Updating... </div>
+                </a>
             {% endif %}
     </div>
+</div>
+<div class ="row">
+    {% if is_granted('ROLE_USER') %}
+        {% if is_granted('ROLE_FIELD') %}
+            <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                <strong>Toggle field user off</strong>
+            </a>
+        {% else %}
+            <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+                <strong>Toggle field user on</strong>
+            </a>
+        {% endif %}
+    {% endif %}
 </div>
 <div class="row">
     <h4>Log Functions</h4>
