--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -17,19 +17,25 @@
             {% endif %}
     </div>
 </div>
-<div class ="row">
-    {% if is_granted('ROLE_USER') %}
-        {% if is_granted('ROLE_FIELD') %}
-            <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
-                <strong>Toggle field user off</strong>
-            </a>
-        {% else %}
-            <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
-                <strong>Toggle field user on</strong>
-            </a>
-        {% endif %}
+{% if is_granted('ROLE_USER') %}
+    {% if is_granted('ROLE_FIELD') %}
+        <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <strong>Toggle field user off</strong>
+                </div>
+            </div>
+        </a>
+    {% else %}
+        <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <strong>Toggle field user on</strong>
+                </div>
+            </div>
+        </a>
     {% endif %}
-</div>
+{% endif %}
 <div class="row">
     <h4>Log Functions</h4>
 </div>
