Modified field user button

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -22,7 +22,7 @@
         <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <strong>Toggle field user off</strong>
+                    Toggle field user off
                 </div>
             </div>
         </a>
@@ -30,7 +30,7 @@
         <a href="{{ path('field_user_toggle') }}" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <strong>Toggle field user on</strong>
+                    Toggle field user on
                 </div>
             </div>
         </a>
