--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -38,12 +38,12 @@
     {% endif %}
     <div class="form-group">
         <label>Select Event:</label>
-        <select id="event" class="form-control">
+        {#<select id="event" class="form-control">#}
             {% for event in activeEvents(app.user.id) %}
                 {{ event }}
                 {#<option value = "{{ event.id }}" class = "form-control">{{ event.name }}</option>#}
             {% endfor %}
-        </select>
+        {#</select>#}
     </div>
 {% endif %}
 <div class="row">
