--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -40,7 +40,9 @@
         <label>Select Event:</label>
         {#<select id="event" class="form-control">#}
             {% for event in activeEvents(app.user.id) %}
-                {{ event }}
+                {% for value in event %}
+                    {{ value }}
+                {% endfor %}
                 {#<option value = "{{ event.id }}" class = "form-control">{{ event.name }}</option>#}
             {% endfor %}
         {#</select>#}
