--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -39,6 +39,7 @@
     <div class="form-group">
         <label>Select Event:</label>
         <select id="event" class="form-control">
+            <option value = "0" class = "form-control"></option>
             {% for event in activeEvents(app.user.id) %}
                 <option value = "{{ event.id }}" class = "form-control">{{ event.name }}</option>
             {% endfor %}
