--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -19,19 +19,21 @@
     </div>
 </div>
 {% if is_granted('ROLE_USER') %}
-    <div class="form-group">
-        <label>Select Event:</label>
-        <select id="event" class="form-control" onchange="setActiveEvent(this)">
-            <option value = "0" class = "form-control"></option>
-            {% for event in activeEvents(app.user.id) %}
-                {% if event.id == activeEventId(app.user.id) %}
-                    <option value = "{{ event.id }}" class = "form-control" selected = "selected">{{ event.name }}</option>
-                {% else %}
-                    <option value = "{{ event.id }}" class = "form-control">{{ event.name }}</option>
-                {% endif %}
-            {% endfor %}
-        </select>
-    </div>
+    {% if activeEvents(app.user.id)|length > 1 %}
+        <div class="form-group">
+            <label>Select Event:</label>
+            <select id="event" class="form-control" onchange="setActiveEvent(this)">
+                <option value = "0" class = "form-control"></option>
+                {% for event in activeEvents(app.user.id) %}
+                    {% if event.id == activeEventId(app.user.id) %}
+                        <option value = "{{ event.id }}" class = "form-control" selected = "selected">{{ event.name }}</option>
+                    {% else %}
+                        <option value = "{{ event.id }}" class = "form-control">{{ event.name }}</option>
+                    {% endif %}
+                {% endfor %}
+            </select>
+        </div>
+    {% endif %}
 {% endif %}
 <div class="row">
     <h4>Log Functions</h4>
