fix for event form

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -195,6 +195,7 @@ Event Entry Form
                                         {% endfor %}
                                     </ul>
                                 </div>
+                                {% do form.locations.setRendered %}
                             </div>
                         </div><br>
                         <div class="row">  
