Added datatable formatting

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css') }}" />
 <link rel="stylesheet" href="{{ asset('assets/vendor/easy-autocomplete/easy-autocomplete.min.css') }}" />
 <link rel="stylesheet" href="{{ asset('assets/vendor/jqueryui/themes/ui-lightness/jquery-ui.min.css') }}" media="screen">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/dataTables.bootstrap.min.css" />
 <style>
 .severity1 {
     background-color: #E50D00;
@@ -203,6 +204,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/geolocator/2.1.0/geolocator.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0L5FuS1PZXDw90PINaMckDeQyIj_em1M"></script>
     <script type="text/javascript"src="{{ asset('assets/vendor/jqueryui/jquery-ui.min.js') }}"></script>
+    <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap.min.js"></script>
     <script type="text/javascript">
     
         var alertData = null;
