--- a/app/Resources/views/logTable2.html.twig
+++ b/app/Resources/views/logTable2.html.twig
@@ -2,7 +2,7 @@
     {% if logs is empty %}
         No logs available
     {% else %}
-        <table class="table table-sm table-striped table-bordered table-hover">
+        <table id="Logs" class="table table-sm table-striped table-bordered table-hover">
             <thead>
                 <tr>
                     <th>Log Time</th>
