--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -153,9 +153,11 @@ Control Room Log
                     {
                         $("#logTable").html(data);
                         oldTable = data;
+                        
                     }
                 }
             });
+            $('#Logs').DataTable();
             setTimeout(dataPoll,5000);
         }
     </script>
