--- a/app/Resources/views/log2.html.twig
+++ b/app/Resources/views/log2.html.twig
@@ -137,7 +137,8 @@ Control Room Log
         $(document).ready(function() {
             dataPoll();
             $('#Logs').DataTable( {
-                "pageLength": 15
+                "pageLength": 15,
+                "lengthMenu": [ [10, 15, 25, 50, -1], [10, 15, 25, 50, "All"] ]
             });
         });
         
@@ -158,7 +159,8 @@ Control Room Log
                         $("#logTable").html(data);
                         oldTable = data;
                         $('#Logs').DataTable( {
-                            "pageLength": 15
+                            "pageLength": 15,
+                            "lengthMenu": [ [10, 15, 25, 50, -1], [10, 15, 25, 50, "All"] ]
                         });
                         
                     }
