--- a/app/Resources/views/peoplecounting.html.twig
+++ b/app/Resources/views/peoplecounting.html.twig
@@ -22,7 +22,7 @@
                         {% if venues is empty %}
                             No venues
                         {% else %}
-                            <table class="table table-striped">
+                            <table id="Venues" class="table table-striped">
                                 <tbody>
                                 <tr>
                                     <td><strong>Id</strong></td>
@@ -62,4 +62,19 @@
             {% include 'sidebar.twig' %}
         {% endblock %}
     {% endembed %}
+{% endblock %}
+{% block scripts %}
+    <script type="text/javascript">
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+        
+        $(document).ready(function() {
+            dataPoll();
+            $('#Venues').DataTable( {
+                "pageLength": 10,
+                "lengthMenu": [ [10, 25, 50, -1], [10, 25, 50, "All"] ]
+            });
+        });
+    </script>
 {% endblock %}
