Updated table ordering

--- a/app/Resources/views/userList.html.twig
+++ b/app/Resources/views/userList.html.twig
@@ -59,6 +59,7 @@ Control Room Users
         
         $(document).ready(function() {
             $('#Users').DataTable( {
+                "order": [],
                 "pageLength": 10,
                 "lengthMenu": [ [10, 25, 50, -1], [10, 25, 50, "All"] ]
             });
