--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -84,6 +84,7 @@ Events Settings
         
         $(document).ready(function() {
             $('#Events').DataTable( {
+                "order": [],
                 "pageLength": 10,
                 "lengthMenu": [ [10, 25, 50, -1], [10, 25, 50, "All"] ]
             });
