--- a/app/Resources/views/peoplecounting.html.twig
+++ b/app/Resources/views/peoplecounting.html.twig
@@ -71,6 +71,7 @@
         
         $(document).ready(function() {
             $('#Venues').DataTable( {
+                "order": [],
                 "pageLength": 10,
                 "lengthMenu": [ [10, 25, 50, -1], [10, 25, 50, "All"] ]
             });
