Modified pdf report text

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -10,7 +10,7 @@
                     <h1>{{ event.name }} Event Control</h1>
                     {{ event.client }}<br>
                     Report Produced: {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
-                    <h2>Log Entry ID: {{ entry.id }}</h2>
+                    <h2>Log Entry ID:</h2> <h3>{{ entry.id }}</h3>
                 </div>
             </div>
             <div class="row">
